@@ -1,155 +1,100 @@
 package dev.jsinco.brewery.bukkit.command;
 
-import dev.jsinco.brewery.brew.BrewImpl;
-import dev.jsinco.brewery.brew.BrewingStep;
+import com.mojang.brigadier.arguments.DoubleArgumentType;
+import com.mojang.brigadier.arguments.IntegerArgumentType;
+import com.mojang.brigadier.builder.ArgumentBuilder;
+import com.mojang.brigadier.context.CommandContext;
+import dev.jsinco.brewery.brew.*;
 import dev.jsinco.brewery.breweries.BarrelType;
 import dev.jsinco.brewery.breweries.CauldronType;
 import dev.jsinco.brewery.bukkit.brew.BrewAdapter;
-import dev.jsinco.brewery.bukkit.ingredient.BukkitIngredientManager;
-import dev.jsinco.brewery.configuration.locale.TranslationsConfig;
+import dev.jsinco.brewery.bukkit.command.argument.EnumArgument;
+import dev.jsinco.brewery.bukkit.command.argument.FlaggedArgumentBuilder;
+import dev.jsinco.brewery.bukkit.command.argument.IngredientsArgument;
+import dev.jsinco.brewery.configuration.Config;
 import dev.jsinco.brewery.ingredient.Ingredient;
-import dev.jsinco.brewery.util.BreweryKey;
-import dev.jsinco.brewery.util.Registry;
-import dev.jsinco.brewery.moment.Moment;
 import dev.jsinco.brewery.moment.PassedMoment;
-import net.kyori.adventure.text.minimessage.MiniMessage;
+import dev.jsinco.brewery.util.MessageUtil;
+import dev.jsinco.brewery.util.Pair;
+import io.papermc.paper.command.brigadier.CommandSourceStack;
+import io.papermc.paper.command.brigadier.Commands;
 import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
-import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import org.jetbrains.annotations.NotNull;
+import org.bukkit.inventory.PlayerInventory;
 
-import java.util.*;
-import java.util.function.BiFunction;
-import java.util.stream.Stream;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class CreateCommand {
 
-    private static final List<String> TAB_COMPLETIONS = List.of("-a", "--age", "-d", "--distill", "-c", "--cook", "--mix", "-m");
-    private static final Map<String, String> REPLACEMENTS = Map.of(
-            "-a", "--age",
-            "-d", "--distill",
-            "-c", "--cook",
-            "-m", "--mix"
-    );
-
-    public static boolean onCommand(Player target, CommandSender sender, String[] args) {
-        Map<String, BiFunction<Queue<String>, CommandSender, BrewingStep>> operators = Map.of(
-                "--age", CreateCommand::getAge,
-                "--distill", CreateCommand::getDistill,
-                "--cook", CreateCommand::getCook,
-                "--mix", CreateCommand::getMix
-        );
-
-        Queue<String> arguments = new LinkedList<>(Arrays.asList(args));
-        List<BrewingStep> steps = new ArrayList<>();
-        while (!arguments.isEmpty()) {
-            String operatorName = arguments.poll();
-            if (REPLACEMENTS.containsKey(operatorName)) {
-                operatorName = REPLACEMENTS.get(operatorName);
+    public static ArgumentBuilder<CommandSourceStack, ?> command() {
+        FlaggedArgumentBuilder.Flag cook = new FlaggedArgumentBuilder.Flag("cook", "c", List.of(
+                new Pair<>("cook-time", DoubleArgumentType.doubleArg(0)),
+                new Pair<>("cauldron-type", new EnumArgument<>(CauldronType.class)),
+                new Pair<>("cook-ingredients", new IngredientsArgument())
+        ), Set.of(FlaggedArgumentBuilder.FlagProperty.MANDATORY_FIRST, FlaggedArgumentBuilder.FlagProperty.ONLY_FIRST));
+        FlaggedArgumentBuilder.Flag mix = new FlaggedArgumentBuilder.Flag("mix", "m", List.of(
+                new Pair<>("mix-time", DoubleArgumentType.doubleArg(0)),
+                new Pair<>("mix-ingredients", new IngredientsArgument())
+        ), Set.of(FlaggedArgumentBuilder.FlagProperty.MANDATORY_FIRST, FlaggedArgumentBuilder.FlagProperty.ONLY_FIRST));
+        FlaggedArgumentBuilder.Flag distill = new FlaggedArgumentBuilder.Flag("distill", "d", List.of(
+                new Pair<>("distill-runs", IntegerArgumentType.integer(1))
+        ), Set.of());
+        FlaggedArgumentBuilder.Flag age = new FlaggedArgumentBuilder.Flag("age", "a", List.of(
+                new Pair<>("barrel-type", new EnumArgument<>(BarrelType.class)),
+                new Pair<>("aging-years", DoubleArgumentType.doubleArg(0))
+        ), Set.of());
+        List<ArgumentBuilder<CommandSourceStack, ?>> tree = new FlaggedArgumentBuilder(Set.of(cook, mix, distill, age), (context, flags) -> {
+            List<BrewingStep> steps = new ArrayList<>();
+            for (FlaggedArgumentBuilder.Flag flag : flags) {
+                if (flag == cook) {
+                    steps.add(parseCook(context));
+                } else if (flag == mix) {
+                    steps.add(parseMix(context));
+                } else if (flag == distill) {
+                    steps.add(parseDistill(context));
+                } else if (flag == age) {
+                    steps.add(parseAge(context));
+                }
             }
-            BiFunction<Queue<String>, CommandSender, BrewingStep> operator = operators.get(operatorName);
-            if (operator == null) {
-                sender.sendMessage(MiniMessage.miniMessage().deserialize(TranslationsConfig.COMMAND_CREATE_UNKNOWN_ARGUMENT, Placeholder.unparsed("argument", operatorName)));
-                return false;
+            Player target = BreweryCommand.getPlayer(context);
+            ItemStack brewItem = BrewAdapter.toItem(new BrewImpl(steps), new BrewImpl.State.Other());
+            PlayerInventory inventory = target.getInventory();
+            if (!inventory.addItem(brewItem).isEmpty()) {
+                target.getWorld().dropItem(target.getLocation(), brewItem);
             }
-            steps.add(operator.apply(arguments, sender));
-        }
-        ItemStack brewItem = BrewAdapter.toItem(new BrewImpl(steps), new BrewImpl.State.Other());
-        target.getWorld().dropItem(target.getLocation(), brewItem);
-        sender.sendMessage(MiniMessage.miniMessage().deserialize(TranslationsConfig.COMMAND_CREATE_SUCCESS, Placeholder.component("brew_name", brewItem.effectiveName())));
-        return true;
+            MessageUtil.message(context.getSource().getSender(), "tbp.command.create.success",
+                    Placeholder.component("brew_name", brewItem.effectiveName())
+            );
+        }).build();
+        ArgumentBuilder<CommandSourceStack, ?> root = Commands.literal("create");
+        tree.forEach(root::then);
+        root.then(BreweryCommand.playerBranch(argument -> tree.forEach(argument::then)));
+        return root;
     }
 
-    private static BrewingStep getMix(Queue<String> arguments, CommandSender sender) {
-        long cookTime = (long) (Double.parseDouble(arguments.poll()) * Moment.MINUTE);
-        Map<Ingredient, Integer> ingredients = retrieveIngredients(arguments, sender);
-        return new BrewingStep.Mix(new PassedMoment(cookTime), ingredients);
+    private static BrewingStep parseAge(CommandContext<CommandSourceStack> context) {
+        double agingYears = context.getArgument("aging-years", double.class);
+        return new AgeStepImpl(new PassedMoment((long) (agingYears * Config.config().barrels().agingYearTicks())), context.getArgument("barrel-type", BarrelType.class));
     }
 
-    private static Map<Ingredient, Integer> retrieveIngredients(Queue<String> arguments, CommandSender sender) {
-        List<String> ingredientStrings = new ArrayList<>();
-        while (!arguments.isEmpty() && !arguments.peek().startsWith("-")) {
-            ingredientStrings.add(arguments.poll());
-        }
-        List<String> invalidIngredientArguments = ingredientStrings.stream()
-                .filter(ingredient -> !BukkitIngredientManager.INSTANCE.isValidIngredient(ingredient))
-                .toList();
-        if (!invalidIngredientArguments.isEmpty()) {
-            String invalidIngredients = String.join(",", invalidIngredientArguments);
-            sender.sendMessage(MiniMessage.miniMessage().deserialize(TranslationsConfig.COMMAND_CREATE_UNKNOWN_ARGUMENT, Placeholder.unparsed("argument", invalidIngredients)));
-            throw new IllegalArgumentException("Could not find the ingredient(s): " + invalidIngredients);
-        }
-        return BukkitIngredientManager.INSTANCE.getIngredientsWithAmount(ingredientStrings);
+    private static BrewingStep parseDistill(CommandContext<CommandSourceStack> context) {
+        return new DistillStepImpl(context.getArgument("distill-runs", int.class));
     }
 
-    private static BrewingStep getCook(Queue<String> arguments, CommandSender sender) {
-        long cookTime = (long) (Double.parseDouble(arguments.poll()) * Moment.MINUTE);
-        CauldronType cauldronType = Registry.CAULDRON_TYPE.get(BreweryKey.parse(arguments.poll()));
-        return new BrewingStep.Cook(new PassedMoment(cookTime), retrieveIngredients(arguments, sender), cauldronType);
+    private static BrewingStep parseMix(CommandContext<CommandSourceStack> context) {
+        double mixTime = context.getArgument("mix-time", double.class);
+        Map<Ingredient, Integer> ingredients = context.getArgument("mix-ingredients", Map.class);
+        return new MixStepImpl(new PassedMoment((long) (mixTime * Config.config().cauldrons().cookingMinuteTicks())), ingredients);
     }
 
-    private static BrewingStep getDistill(Queue<String> arguments, CommandSender sender) {
-        int distillAmount = Integer.parseInt(arguments.poll());
-        return new BrewingStep.Distill(distillAmount);
-    }
-
-    private static BrewingStep getAge(Queue<String> arguments, CommandSender sender) {
-        long age = (long) (Double.parseDouble(arguments.poll()) * Moment.AGING_YEAR);
-        BarrelType barrelType = Registry.BARREL_TYPE.get(BreweryKey.parse(arguments.poll()));
-        return new BrewingStep.Age(new PassedMoment(age), barrelType);
-    }
-
-    public static List<String> tabComplete(@NotNull String @NotNull [] args) {
-        for (int i = args.length - 2; i >= 0; i--) {
-            if (TAB_COMPLETIONS.contains(args[i])) {
-                int precedingArgsLength = args.length - i - 1;
-                return switch (REPLACEMENTS.getOrDefault(args[i], args[i])) {
-                    case "--age" -> {
-                        if (precedingArgsLength == 1) {
-                            yield BreweryCommand.INTEGER_TAB_COMPLETIONS;
-                        } else if (precedingArgsLength == 2) {
-                            yield Registry.BARREL_TYPE.values().stream()
-                                    .map(BarrelType::key)
-                                    .map(BreweryKey::key)
-                                    .toList();
-                        } else if (precedingArgsLength == 3) {
-                            yield TAB_COMPLETIONS;
-                        }
-                        yield List.of();
-                    }
-                    case "--cook" -> {
-                        if (precedingArgsLength == 1) {
-                            yield BreweryCommand.INTEGER_TAB_COMPLETIONS;
-                        } else if (precedingArgsLength == 2) {
-                            yield Registry.CAULDRON_TYPE.values().stream()
-                                    .map(CauldronType::key)
-                                    .map(BreweryKey::key)
-                                    .toList();
-                        }
-                        yield Stream.concat(Stream.of("<ingredient/amount>"), TAB_COMPLETIONS.stream()).toList();
-                    }
-                    case "--distill" -> {
-                        if (precedingArgsLength == 1) {
-                            yield BreweryCommand.INTEGER_TAB_COMPLETIONS;
-                        } else if (precedingArgsLength == 2) {
-                            yield TAB_COMPLETIONS;
-                        }
-                        yield List.of();
-                    }
-                    case "--mix" -> {
-                        if (precedingArgsLength == 1) {
-                            yield BreweryCommand.INTEGER_TAB_COMPLETIONS;
-                        }
-                        yield Stream.concat(Stream.of("<ingredient/amount>"), TAB_COMPLETIONS.stream()).toList();
-                    }
-                    default ->
-                            throw new IllegalStateException("Unexpected value: " + REPLACEMENTS.getOrDefault(args[i], args[i]));
-                };
-            } else if (args[i].startsWith("-")) {
-                return List.of();
-            }
-        }
-        return TAB_COMPLETIONS;
+    private static BrewingStep parseCook(CommandContext<CommandSourceStack> context) {
+        double cookTime = context.getArgument("cook-time", double.class);
+        CauldronType cauldronType = context.getArgument("cauldron-type", CauldronType.class);
+        Map<Ingredient, Integer> ingredients = context.getArgument("cook-ingredients", Map.class);
+        return new CookStepImpl(new PassedMoment((long) (cookTime * Config.config().cauldrons().cookingMinuteTicks())), ingredients, cauldronType);
     }
 }
